# deprecated_old_bevy_ratatui

./: Cargo.toml  README.md
examples/: hello_bevy.rs  hello_bracket.rs  roguelike.rs
examples/demo/: bevy.rs  bracket.rs  main.rs
src/: bevy_backend.rs  bracket_backend.rs  components.rs  lib.rs  ratatui_plugin.rs
