[package]
name = "bevy_ratatui"
version = "0.2.2"
edition = "2021"
description = "Ratatui in bevy !! See examples . "
license = "MIT OR Apache-2.0"

exclude = [
  "assets/*",
  ".github",
  "Makefile.toml",
  "CONTRIBUTING.md",
  "*.log",
  "tags",
]

[dependencies]


bevy = { version = "0.13.0",  default-features = false, features = [ 
  "bevy_asset",


  "bevy_scene",
  "bevy_winit",
  "bevy_core_pipeline",

  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "multi-threaded",
  "png",
 
  "bevy_gizmos",
  "x11",

 
  "default_font",
  
]}
ratatui = { version = "0.26.1",  default-features = false }

[dev-dependencies]
once_cell = { version = "1.19.0"}
rand = "0.8.5"
argh = "0.1.12"

[[example]]
name = "hello_bevy"
doc-scrape-examples = true


[[example]]
name = "demo"
doc-scrape-examples = false
